# UZHAVANKART

./: .gitignore  Dockerfile  Procfile  README.md  db.sqlite3  procfile  pyproject.toml  render.yaml  requirements.txt  start.sh
staticfiles/: staticfiles.json
uk/: procfile  settings.py  urls.py
uzhavankart/: apps.py  forms.py  models.py  urls.py  views.py
uzhavankart/management/commands/: seed_employee.py
uzhavankart/migrations/: 0001_initial.py  0002_farmer.py  0002_otpstore.py  0003_alter_staffattendance_date.py  0003_product_alter_farmer_photo.py  0004_payment.py  0005_employee.py  0006_contactmessage_delete_adminuser_delete_payment.py  0007_delete_contactmessage.py  0008_contactmessage.py  0009_contactmessage_is_resolved.py  0010_cropproduct.py  0011_stock.py  0012_stock_crop_name.py  0013_attendance_driver_staff.py  0014_delete_attendance_delete_driver_delete_staff.py  0015_driver.py  0016_staff.py  0017_staffattendance_driverattendance.py  0018_delete_staffattendance.py  0019_staffattendance.py  0020_alter_driverattendance_unique_together_and_more.py  0021_vehicle.py  0022_vehicle_id_alter_vehicle_vehicle_id.py  0023_remove_vehicle_id_alter_vehicle_vehicle_id.py  0024_customer.py  0025_cart.py  0026_remove_cart_customer_cart_customer_email.py  0027_order.py  0028_remove_order_product_order_crop_name.py  0029_alter_order_payment_method_alter_order_quantity_and_more.py  0030_vehicle_id_alter_vehicle_vehicle_id.py
uzhavankart/templates/uk/: about.html  add_product.html  add_stock.html  admin.html  admin_hub.html  admin_hub_stock_view.html  admin_messages.html  (+73 more)
