[project]
name = "uzhavankart"
version = "0.1.0"
description = "Agriculture E-commerce platform"
requires-python = ">=3.10"
dependencies = [
    "Django==4.2.20",
    "psycopg2-binary==2.9.9",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "Pillow==10.3.0",
    "dj-database-url==2.1.0",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "cloudinary==1.36.0",
    "django-cloudinary-storage==0.3.0",
    "sendgrid==6.11.0",
    "django-sendgrid-v5==1.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
